--- a/All Integrated 3/mainwindow.ui
+++ b/All Integrated 3/mainwindow.ui
@@ -119,80 +119,6 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="settingsTopButton">
-              <property name="minimumSize">
-               <size>
-                <width>28</width>
-                <height>28</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>32</width>
-                <height>32</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">border-radius: 5px; background-color: #404040;</string>
-              </property>
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset resource="resources.qrc">
-                <normaloff>:/icons/Settings.png</normaloff>:/icons/Settings.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>24</width>
-                <height>24</height>
-               </size>
-              </property>
-              <property name="flat">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="audioTopButton">
-              <property name="minimumSize">
-               <size>
-                <width>28</width>
-                <height>28</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>32</width>
-                <height>32</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">border-radius: 5px; background-color: #404040;</string>
-              </property>
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset resource="resources.qrc">
-                <normaloff>:/icons/Volume.png</normaloff>
-                <normalon>:/icons/Mute.png</normalon>:/icons/Volume.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>24</width>
-                <height>24</height>
-               </size>
-              </property>
-              <property name="checkable">
-               <bool>true</bool>
-              </property>
-              <property name="flat">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item>
              <spacer name="horizontalSpacer_9">
               <property name="orientation">
                <enum>Qt::Orientation::Horizontal</enum>
@@ -223,40 +149,50 @@
            </widget>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_recordButtons">
+           <layout class="QGridLayout" name="gridLayout_recordButtons">
             <property name="spacing">
              <number>4</number>
             </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <spacer name="horizontalSpacer_12">
-              <property name="orientation">
-               <enum>Qt::Orientation::Horizontal</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Policy::Preferred</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
+            <item row="0" column="0">
+             <widget class="QToolButton" name="settingsRecordButton">
+              <property name="minimumSize">
                <size>
-                <width>2</width>
-                <height>20</height>
+                <width>28</width>
+                <height>28</height>
                </size>
               </property>
-             </spacer>
+              <property name="maximumSize">
+               <size>
+                <width>28</width>
+                <height>28</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">border-radius: 5px; background-color: #404040;</string>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="icon">
+               <iconset resource="resources.qrc">
+                <normaloff>:/icons/Settings.png</normaloff>:/icons/Settings.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
+              <property name="autoRaise">
+               <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Recording settings</string>
+              </property>
+             </widget>
             </item>
-            <item alignment="Qt::AlignmentFlag::AlignHCenter">
-             <widget class="QPushButton" name="recordRedCircle">
+            <item row="0" column="1">
+             <widget class="QToolButton" name="recordRedCircle">
               <property name="minimumSize">
                <size>
                 <width>28</width>
@@ -289,13 +225,16 @@
               <property name="checkable">
                <bool>true</bool>
               </property>
-              <property name="flat">
+              <property name="autoRaise">
                <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Start/Stop recording</string>
               </property>
              </widget>
             </item>
-            <item>
-             <widget class="QPushButton" name="playButton">
+            <item row="1" column="0">
+             <widget class="QToolButton" name="playButton">
               <property name="minimumSize">
                <size>
                 <width>28</width>
@@ -321,33 +260,103 @@
               </property>
               <property name="iconSize">
                <size>
-                <width>21</width>
-                <height>21</height>
+                <width>24</width>
+                <height>24</height>
                </size>
               </property>
               <property name="checkable">
                <bool>true</bool>
               </property>
-              <property name="flat">
+              <property name="autoRaise">
                <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Pause/Resume recording</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QToolButton" name="captureButton">
+              <property name="minimumSize">
+               <size>
+                <width>28</width>
+                <height>28</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>28</width>
+                <height>28</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">border-radius: 5px; background-color: #404040;</string>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="icon">
+               <iconset resource="resources.qrc">
+                <normaloff>:/icons/capture.png</normaloff>:/icons/capture.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
+              <property name="autoRaise">
+               <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Capture a screenshot of the preview</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_recordStatus">
+            <property name="spacing">
+             <number>6</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>4</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>8</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="recordStatusIcon">
+              <property name="minimumSize">
+               <size>
+                <width>12</width>
+                <height>12</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>12</width>
+                <height>12</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: #777777; border-radius: 6px;</string>
               </property>
              </widget>
             </item>
             <item>
-             <spacer name="horizontalSpacer_11">
-              <property name="orientation">
-               <enum>Qt::Orientation::Horizontal</enum>
+             <widget class="QLabel" name="recordStatusText">
+              <property name="text">
+               <string>Ready</string>
               </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Policy::Preferred</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>2</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
+             </widget>
             </item>
            </layout>
           </item>
@@ -671,7 +680,7 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="bottomButton1">
+             <widget class="QPushButton" name="audioTopButton">
               <property name="minimumSize">
                <size>
                 <width>28</width>
@@ -680,8 +689,8 @@
               </property>
               <property name="maximumSize">
                <size>
-                <width>32</width>
-                <height>32</height>
+                <width>28</width>
+                <height>28</height>
                </size>
               </property>
               <property name="styleSheet">
@@ -690,8 +699,25 @@
               <property name="text">
                <string/>
               </property>
+              <property name="icon">
+               <iconset resource="resources.qrc">
+                <normaloff>:/icons/Volume.png</normaloff>
+                <normalon>:/icons/Mute.png</normalon>:/icons/Volume.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>24</width>
+                <height>24</height>
+               </size>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
               <property name="flat">
                <bool>true</bool>
+              </property>
+              <property name="toolTip">
+               <string>Monitor audio mute</string>
               </property>
              </widget>
             </item>
@@ -705,8 +731,8 @@
               </property>
               <property name="maximumSize">
                <size>
-                <width>32</width>
-                <height>32</height>
+                <width>28</width>
+                <height>28</height>
                </size>
               </property>
               <property name="styleSheet">
